--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-"name": "Ariah-md-bot",    
+"name": "Jay-md",    
 "version": "1.0.0",
 "scripts": {
-"start": "pm2 start index.js --deep-monitoring --attach --name ariah",
-"stop": "pm2 stop ariah",
+"start": "pm2 start index.js --deep-monitoring --attach --name jay",
+"stop": "pm2 stop jay",
 "restart": "git pull && npm stop && npm start",
 "stash": "git stash && git stash drop"
 },
