--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Ariah MD  whatsapp",
+  "name": "Black Panther MD X5 whatsapp",
   "description": "whatsapp md bot build with nodejs",
-  "repository": "https://github.com/Ariahjay/ARIAH-MD-BOT-svg/Ariah-MD-",
+  "repository": "https://github.com/BlackPanther-svg/Black-Panther-MD-",
   "logo": "https://telegra.ph/file/ec059aa5db556bbd951c6.jpg",
   "keywords": ["nodejs", "bot", "what5sapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
@@ -42,3 +42,4 @@
         }
     }
 }
+
