--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-  "name": "Ariah MD  whatsapp",
+  "name": "Ariah MD whatsapp",
   "description": "whatsapp md bot build with nodejs",
   "repository": "https://github.com/Ariahjay/ARIAH-MD-BOT",
   "logo": "https://telegra.ph/file/ec059aa5db556bbd951c6.jpg",
-  "keywords": ["nodejs", "bot", "what5sapp bot", "whatsapp automation", "multi device"],
+  "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
     {
       "url": "heroku/nodejs"
@@ -15,31 +15,19 @@
       "url": "https://github.com/DuckyTeam/heroku-buildpack-imagemagick"
     },
     {
-      "url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git"
-    },
-        "required": false
-  
-                    
-
-}  "formation": {
-  		"worker": {
-			"quantity": 1,
-			"size": "basic"
-		}
-	},
-
-  "addons":[
+      "url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git",
+      "required": false
+    }
+  ],
+  "formation": {
+    "worker": {
+      "quantity": 1,
+      "size": "basic"
+    }
+  },
+  "addons": [
     {
-      "plan":"heroku-postgresql:essential-0"
+      "plan": "heroku-postgresql:essential-0"
     }
   ]
-    
-  ],
-   "formation": {
-        "worker": {
-            "quantity": 1,
-            "size": "free"
-        }
-    }
 }
-
